Fix overflow to the right in messages.

--- a/client/sass/irc.sass
+++ b/client/sass/irc.sass
@@ -331,6 +331,7 @@ label.checkbox
   
 // Channels
 .channel-container
+  overflow: hidden
   +tablet-portrait-and-above
     padding-top: 100px
   .alert
